...
        android:text="Iniciar sesión"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
...
        android:hint="Usuario"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
...
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:onClick="iniciarSesion"
        android:text="ENTRAR" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
...
