<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedorGasolineras"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GasolineraDetalleActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbFav"
...
        android:onClick="favoritos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_menu_favoritos" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbResenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="44dp"
        android:clickable="true"
        android:contentDescription="Botón reseñas"
...
